--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <input type="radio" id="No" name="havedog" value="No">
   <label for="No">No</label><br><br>
 			
-			<label for="dognumber">If yes, how many dogs do you have?:</label><br>
+			<label for="dognumber">If yes, how many dogs do you have?</label><br>
   <input type="text" id="dognumber" name="dognumber"><br><br>
 			
 			<label for="dogname">What is/are your dog(s) name(s)?</label><br>
